tests/analyzer/fail/duplicate-symbol-triv-uniq.api
// expected: 1005

type func1 = u32;
type func1 = struct {a: u32 };
